--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,17 @@ jobs:
           echo "PR Comments: $PR_COMMENTS"
           echo "PR_COMMENTS=${PR_COMMENTS}" >> "$GITHUB_OUTPUT"
 
+          # Extract the first comment with the word 'release' in the body
+          FIRST_RELEASE_COMMENT=$(echo "$PR_COMMENTS" | jq -r '.[] | select(.body | test("release"; "i")) | .body' | head -n 1)
+
+          if [[ -n "$FIRST_RELEASE_COMMENT" ]]; then
+            echo "First comment with 'release': $FIRST_RELEASE_COMMENT"
+            echo "FIRST_RELEASE_COMMENT=${FIRST_RELEASE_COMMENT}" >> "$GITHUB_OUTPUT"
+          else
+            echo "No comment with the word 'release' found."
+            exit 1
+          fi
+
           if [[ $PR_TITLE =~ ^release\((.+)\):\s*(.+)$ ]]; then
             PR_SCOPE=${BASH_REMATCH[1]}
             RELEASE_VERSION=${BASH_REMATCH[2]# }
