--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,9 @@ jobs:
             echo "PR_SCOPE=${PR_SCOPE}" >> "$GITHUB_OUTPUT"
             echo "Release version: $RELEASE_VERSION"
             echo "RELEASE_VERSION=${RELEASE_VERSION}" >> "$GITHUB_OUTPUT"
+          else
+            echo "PR title does not match the expected format."
+            exit 1
           fi
       - name: show
         run: |
